--- a/src/components/main/shoppingCard/ShoppingCard.module.css
+++ b/src/components/main/shoppingCard/ShoppingCard.module.css
@@ -1,3 +1,21 @@
+.emptyCard {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.emptyCardHeading {
+  margin-bottom: 20px;
+}
+
+.emptyCard > svg {
+  margin: 40px 0;
+}
+
 .shoppingCard {
   margin: 80px auto;
   max-width: 800px;
@@ -8,10 +26,20 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #f7f7f7;
+  margin-bottom: 30px;
 }
 
 .clearCard:hover {
   color: #ff2200;
   cursor: pointer;
+}
+
+.spaceBetween {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 5px 30px 10px;
+}
+
+.totalPrice {
+  color: var(--primary-color);
 }
