--- a/src/components/main/shoppingCard/ShoppingCard.module.css
+++ b/src/components/main/shoppingCard/ShoppingCard.module.css
@@ -34,7 +34,7 @@
   cursor: pointer;
 }
 
-.spaceBetween {
+.totalLine {
   display: flex;
   justify-content: space-between;
   margin: 10px 5px 30px 10px;
@@ -42,4 +42,26 @@
 
 .totalPrice {
   color: var(--primary-color);
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 5px 30px 10px;
+}
+
+@media (max-width: 420px) {
+  .shoppingCard {
+    margin: 40px auto;
+  }
+
+  .totalLine {
+    flex-direction: column;
+  }
+
+  .shoppingCardHead {
+    flex-direction: column;
+    align-items: flex-start;
+    white-space: nowrap;
+  }
 }
