--- a/src/global.css
+++ b/src/global.css
@@ -16,7 +16,13 @@ body {
 .container {
   margin: 0 auto;
   max-width: 1280px;
-  padding: 0 40px;
+  padding: 0 80px;
+}
+
+@media (max-width: 420px) {
+  .container {
+    padding: 0 40px;
+  }
 }
 
 div,
