--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -26,6 +26,16 @@ header > div:first-child > img {
   aspect-ratio: 1;
 }
 
+.buttons {
+  min-width: 100px;
+  display: flex;
+  align-items: center;
+}
+
+.buttons > * {
+  margin-inline: 10px;
+}
+
 @media (max-width: 420px) {
   .title {
     font-size: 18px;
